# books

./: Main.hs  books.cabal  default.nix  release.nix  shell.nix  test.txt
src/: Abebooks.hs  Author.hs  Book.hs  Goodreads.hs  Main.hs  Old.hs  OpenLibrary.hs
src/OpenLibrary/: Author.hs
