name:                books
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              David Pätzel
maintainer:          david.paetzel@posteo.de
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable books
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     -- for parsing JSON
                     , aeson
                     , bytestring
                     -- for Data.Map
                     , containers
                     -- for fetching from openlibrary
                     , http-conduit
                     -- use a better Prelude
                     , protolude
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
